--- a/semana-01/index.html
+++ b/semana-01/index.html
@@ -108,26 +108,22 @@
             <form action="process.php"method="post">
                 <div><label>Username</label></div>
                 <div><input type="text" name="Username"></div>
-                <form action="/action_page.php">
-                    <div><label for="email">Email:</label></div>
-                    <div><input type="email" id="email" name="email"></div>  
-                </form>
+                <div><label for="email">Email:</label></div>
+                <div><input type="email" id="email" name="email"></div>  
                 <div>
-                    <form>
-                        <div><label>Sector</label></div>
-                        <input type="radio" id="rrhh" name="Sector" value="rrhh">
-                        <label for="rrhh">RRHH</label><br>
-                        <input type="radio" id="systems" name="Sector" value="systems">
-                        <label for="systems">SYSTEMS</label><br>
-                        <input type="radio" id="commercialization" name="Sector" value="commercialization">
-                        <label for="commercialization">COMMERCIALIZATION</label>
-                    </form>
+                    <div><label>Sector</label></div>
+                    <input type="radio" id="rrhh" name="Sector" value="rrhh">
+                    <label for="rrhh">RRHH</label><br>
+                    <input type="radio" id="systems" name="Sector" value="systems">
+                    <label for="systems">SYSTEMS</label><br>
+                    <input type="radio" id="commercialization" name="Sector" value="commercialization">
+                    <label for="commercialization">COMMERCIALIZATION</label>
                 </div>
                 <div><label for="PhoneNumber">PhoneNumber (Optional)</label></div>
                 <div><input type="tel" name="PhoneNumber (Optional)"></div>
                 <div><label>Message</label></div>
                 <div><textarea name="message"></textarea></div>
-                <a href="#"><input type="submit" value="Submit"></a>
+                <input type="submit" value="Submit">
             </form>    
             <div><img src="img\contact-1.png"></div>
             <h3>
