--- a/semana-03/index.html
+++ b/semana-03/index.html
@@ -7,11 +7,13 @@
         <title>TRACKGENIX</title>
     </head>
     <body>
-        <img src="img/Interface Security Shield 5 (small).png">
-        <header><a href="#">Sign up</a></header>
+        <header>
+            <a href="#">Sign up</a>
+            <img src="img/Interface Security Shield 5 (small).png" alt="trackgenix icon (small)">
+        </header>
         <h1>TRACKGENIX</h1>
-        <img src="img/fondo-pg-1.png">
-        <img src="img/Interface Security Shield 5.png">
+        <img src="img/fondo-pg-1.png" alt="homepage">
+        <img src="img/Interface Security Shield 5.png" alt="trackgenix icon">
         <aside>
             <nav>
                 <div>Shortcuts</div>
@@ -22,167 +24,186 @@
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Get in touch</a></li>
                     <li><a href="#">Log in</a></li>
-                    
                 </ul>
-            </nav>    
+            </nav>
         </aside>
-        <section>
-            <h2>Hi, I’m Trackgenix by Baltazar’s Team</h2>
-            <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h3>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
-                incididunt ut labore et dolore magna aliqua.
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
-                incididunt ut labore et dolore magna aliqua.
-            </p>
-        </section>
-        <section>
-            <img src="https://media.istockphoto.com/photos/business-concepts-with-businessman-holding-clock-on-computer-to-picture-id1098407382?k=20&m=1098407382&s=612x612&w=0&h=TCOWlDuzLTIMGp7gk2O19jrr1SM6b7BmAEQFlQ1kusA=">
-            <h2>What can I do & why choose me?</h2>
-            <img src="img\desicion-marketing.png">
-            <h3>Decision Making</h3>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua.
-            </p>
-            <img src="img/resourt-manageret.png">
-            <h3>Resource Management</h3>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua.
-            </p>
-            <img src="img\Reports-and-Traceability.png">
-            <h3>Reports and Traceability</h3>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua.
-            </p>
-            <img src="img\Leadership.png">
-            <h3>Leadership</h3>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua.
-            </p>
-            <img src="img\Productivity-Booster.png">
-            <h3>Productivity Booster</h3>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua.
-            </p>
-            <img src="img\Hours-Log.png">
-            <h3>Hours Log</h3>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua.
-            </p>
-        </section>
-        <section>
-            <h2>About Us</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing 
-                elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit 
-                amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua.
-            </p>
-            <img src="img\about-1.png">
-            <img src="img\about-2.png">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing 
-                elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit 
-                amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua. 
-            </p>
-        </section>
-        <section> 
-            <h2>Contact Us</h2>
-            <form action="process.php"method="post">
-                <div><label>Username</label></div>
-                <div><input type="text" name="Username"></div>
-                <div><label for="email">Email:</label></div>
-                <div><input type="email" id="email" name="email"></div>  
-                <div>
-                    <div><label>Sector</label></div>
-                    <input type="radio" id="rrhh" name="Sector" value="rrhh">
-                    <label for="rrhh">RRHH</label><br>
-                    <input type="radio" id="systems" name="Sector" value="systems">
-                    <label for="systems">SYSTEMS</label><br>
-                    <input type="radio" id="commercialization" name="Sector" value="commercialization">
-                    <label for="commercialization">COMMERCIALIZATION</label>
-                </div>
-                <div><label for="PhoneNumber">PhoneNumber (Optional)</label></div>
-                <div><input type="tel" name="PhoneNumber (Optional)"></div>
-                <div><label>Message</label></div>
-                <div><textarea name="message"></textarea></div>
-                <input type="submit" value="Submit">
-            </form>    
-            <div><img src="img\contact-1.png"></div>
-            <h3>
-                Lorem ipsum dolor sit amet, consectetur adipisicing
-                elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </h3>
-            <img src="img\contact-2.png">
-            <h3>
-                974040000/974040001/974040002
-                +99 9 999 999-9999
-                +11 1 111 111-1111
-            </h3>
-            <img src="img\contact-3.png">
-            <h3>
-                Lorem-ipsum@dolorsit.amet
-                consecteturadipisicing@elit.seddo eiusmod_tempor@incididunt.ut labore-et-dolore@magna.aliqua
-            </h3>
-            <h2>products:</h2>
-            <ol>
-                <li><a href="#">Features</a></li>
-                <li><a href="#">Downloads</a></li>
-                <li><a href="#">Integrations</a></li>
-                <li><a href="#">additional features</a></li>
-            </ol>
-            <h2>Business:</h2>
-            <ol>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Customers</a></li>
-                <li><a href="#">Resources</a></li>
-                <li><a href="#">Blog</a></li>
-            </ol>
-            <h2>support:</h2>
-            <ol>
-                <li><a href="#">Help</a></li>
-                <li><a href="#">Tutorials</a></li>
-                <li><a href="#">API</a></li>
-                <li><a href="#">Contact</a></li>
-            </ol>
-        </section>
+        <main>
+            <section>
+                <h2>Hi, I’m Trackgenix by Baltazar’s Team</h2>
+                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
+                    incididunt ut labore et dolore magna aliqua.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
+                    incididunt ut labore et dolore magna aliqua.
+                </p>
+            </section>
+            <section>
+                <img src="https://media.istockphoto.com/photos/business-concepts-with-businessman-holding-clock-on-computer-to-picture-id1098407382?k=20&m=1098407382&s=612x612&w=0&h=TCOWlDuzLTIMGp7gk2O19jrr1SM6b7BmAEQFlQ1kusA="
+                    alt="clock">
+                <h2>What can I do & why choose me?</h2>
+                <img src="img\desicion-marketing.png" alt="desicion-marketing">
+                <h3>Decision Making</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua.
+                </p>
+                <img src="img/resourt-manageret.png" alt="resourt magageremet">
+                <h3>Resource Management</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua.
+                </p>
+                <img src="img\Reports-and-Traceability.png" alt="reports and traceability">
+                <h3>Reports and Traceability</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua.
+                </p>
+                <img src="img\Leadership.png" alt="leardership">
+                <h3>Leadership</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua.
+                </p>
+                <img src="img\Productivity-Booster.png" alt="productivity booster">
+                <h3>Productivity Booster</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua.
+                </p>
+                <img src="img\Hours-Log.png" alt="hours log">
+                <h3>Hours Log</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua.
+                </p>
+            </section>
+            <section>
+                <h2>About Us</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing 
+                    elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit 
+                    amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua.
+                </p>
+                <img src="img\about-1.png" alt="about-1">
+                <img src="img\about-2.png" alt="about-2">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing 
+                    elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit 
+                    amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. 
+                </p>
+            </section>
+            <section> 
+                <h2>Contact Us</h2>
+                <form>
+                    <div>
+                        <label>Username</label>
+                        <input type="text" id="username" name="username">
+                    </div>
+                    <div>
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email">
+                    </div>  
+                    <div>
+                        <label for="sector"> sector</label>
+                        <select id="sector" name="sector">
+                            <option value="rrhh">RRHH</option>
+                            <option value="systems">SYSTEMS</option>
+                            <option value="commercialization">COMMERCIALIZATION</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label for="PhoneNumber">PhoneNumber (Optional)</label>
+                        <input type="tel" id="phonenumber (optional)" name="phonenumber (optional)">
+                    </div>
+                    <div>
+                        <label>Message</label>
+                        <textarea name="message"></textarea>
+                    </div>    
+                    <input type="submit" value="Submit">
+                </form>    
+                <img src="img\contact-1.png" alt="contact-1">
+                <address>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing
+                    elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </address>
+                <img src="img\contact-2.png" alt="contact-2">
+                <address>
+                    974040000/974040001/974040002
+                    +99 9 999 999-9999
+                    +11 1 111 111-1111
+                </address>
+                <img src="img\contact-3.png" alt="contact-3">
+                <address>
+                    Lorem-ipsum@dolorsit.amet
+                    consecteturadipisicing@elit.seddo eiusmod_tempor@incididunt.ut labore-et-dolore@magna.aliqua
+                </address>
+                <h2>products:</h2>
+                <ol>
+                    <li><a href="#">Features</a></li>
+                    <li><a href="#">Downloads</a></li>
+                    <li><a href="#">Integrations</a></li>
+                    <li><a href="#">additional features</a></li>
+                </ol>
+                <h2>Business:</h2>
+                <ol>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Customers</a></li>
+                    <li><a href="#">Resources</a></li>
+                    <li><a href="#">Blog</a></li>
+                </ol>
+                <h2>support:</h2>
+                <ol>
+                    <li><a href="#">Help</a></li>
+                    <li><a href="#">Tutorials</a></li>
+                    <li><a href="#">API</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ol>
+            </section>
+        </main>
         <footer>
-            <a href="https://ar.linkedin.com/">
-                <img src="img/linkedin 1.png">
-            </a>
-            <a href="https://twitter.com/?lang=es">
-                <img src="img/twitter 1.png">
-            </a>
-            <a href="https://www.facebook.com/">
-                <img src="img/facebook 1.png">
-            </a>
-            <a href="https://www.instagram.com/?hl=es-la">
-                <img src="img/instagram 1.png">
-            </a>
-            <a href="https://github.com/">
-                <img src="img/github 1.png">
-            </a>
-            <div>
-                <a href="https://www.google.com/maps/place/Rosario,+Santa+Fe/@-32.9520457,-60.7666801,12z/data=!3m1!4b1!4m5!3m4!1s0x95b6539335d7d75b:0xec4086e90258a557!8m2!3d-32.9587022!4d-60.6930416?hl=es"<p>Rosario, Argentina.</p>
-            </div>
-            <div><p>Copyright © 2022 Trackgenix S.A. All rights reserved.<p></div>
+            <menu>
+                <li>
+                    <a href="https://ar.linkedin.com/">
+                        <img src="img/linkedin 1.png" alt="lickedin">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/?lang=es">
+                        <img src="img/twitter 1.png" alt="twitter">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/">
+                        <img src="img/facebook 1.png" alt="facebook">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/?hl=es-la">
+                        <img src="img/instagram 1.png" alt="instagram">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/">
+                        <img src="img/github 1.png" alt="github">
+                    </a>
+                </li>
+            </menu>
+                <a href="https://www.google.com/maps/place/Rosario,+Santa+Fe/@-32.9520457,-60.7666801,12z/data=!3m1!4b1!4m5!3m4!1s0x95b6539335d7d75b:0xec4086e90258a557!8m2!3d-32.9587022!4d-60.6930416?hl=es"><p>Rosario, Argentina.</p></a>
+            <p>Copyright © 2022 Trackgenix S.A. All rights reserved.<p>
         </footer>        
     </body>
 </html>
