need to see it readme

--- a/semana-04/index.html
+++ b/semana-04/index.html
@@ -11,14 +11,13 @@
         <link rel="stylesheet" href="css/header.css">
         <link rel="stylesheet" href="css/footer.css">
         <link rel="stylesheet" href="css/sidebar.css">
-        <!--Imported fonts-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
-            <button class="nav-var">...</button>
+            <button class="burguer-button">...</button>
             <div class="header-logo"><img src="img/Interface Security Shield 5 (small).png" alt="trackgenix icon (small)"></div>
             <button class="sign-up secondary-body border-box">sign-up</button>
         </header>
